# dell-ai

./: .bumpversion.cfg  .gitignore  AGENTS.md  Notes.md  README.md  RELEASE_PROCESS.md  TREE.md  pyproject.toml
.github/workflows/: contrib.yml  pr-tests.yml  release.yml
dell_ai/: __init__.py  apps.py  auth.py  client.py  constants.py  env.py  exceptions.py  goodput.py  models.py  platforms.py  snippets.py
dell_ai/cli/: main.py  utils.py
dell_ai/system_utils/: README.md  Readme.md  base.py  cpu_info.py  gpu_info.py  helpers.py  k8s_info.py  mem_info.py  os_info.py  storage_info.py  system_info.py
dell_ai/system_utils/gpu_info/: __init__.py  accelerator.py  gpu_info.py
dell_ai/system_utils/gpu_info/driver_info/: amd_driver_info.py  intel_driver_info.py  nvidia_driver_info.py
dell_ai/system_utils/gpu_info/info_getter/: __init__.py  abstract_getter.py  amd_info_getter.py  nvidia_info_getter.py
dell_ai/system_utils/gpu_info/info_populator/: __init__.py  amd_info_populator.py  intel_info_populator.py  nvidia_info_populator.py
examples/: authentication.py  cli-getting-started.md  get_deployment_snippet.py  get_model_details.py  getting-started.ipynb  list_models.py  list_platforms.py  sdk-getting-started.ipynb
skills/dell-ai/: SKILL.md
tests/: conftest.py
tests/integration/check_system/: README.md  service.py
tests/integration/check_system/resources/: sysinfo.json
tests/integration/check_system/resources/r760xa/nvidia/l40s/: cuda128.json  cuda130.json
tests/integration/check_system/resources/xe9680/amd/mi300x/: cuda721.json
tests/integration/check_system/resources/xe9680/nvidia/h200/: cuda128.json
tests/unit/: test_apps.py  test_auth.py  test_cli.py  test_client.py  test_constants.py  test_deployment.py  test_env.py  test_exceptions.py  test_goodput.py  test_model_snippets.py  test_models.py  test_platforms.py  test_snippets.py
tests/unit/system_info/: test_base.py  test_cpu_info.py  test_gpu_info.py  test_k8s_info.py  test_mem_info.py  test_os_info.py  test_storage_info.py  test_system_info.py
tests/unit/system_info/resources/: amd_ctk_version.txt  amd_smi_static_json_non_root.txt  amd_smi_static_json_root.json  amd_smi_version_non_root.json  amd_smi_version_root.json  dmi_file.txt  kubectl_get_nodes.json  kubectl_get_nodes_amd.json  kubectl_version.json  lsblk.json  lscpu_response.json  lspci_stdout_nvidia_gpu.txt  meminfo.txt  nvidia_container_runtime.txt  nvidia_ctk.txt  nvidia_gpu_info.txt  nvidia_smi.txt  system_info_expected.json
