[project]
name = "dell-ai"
version = "0.1.0"
description = "Python SDK and CLI for interacting with the Dell Enterprise Hub (DEH)"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Dell Technologies"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "typer>=0.9.0",
    "pydantic>=2.5.0",
    "huggingface-hub>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dell-ai = "dell_ai.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["dell_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dell_ai --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.coverage.run]
source = ["dell_ai"]
omit = ["tests/*", "**/__init__.py"]