[project]
name = "dell-ai"
version = "0.1.6"
description = "Python SDK and CLI for interacting with the Dell Enterprise Hub (DEH)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
maintainers = [
  {name = "Andrew Reed", email = "andrew.reed@huggingface.co"},
  {name = "Alvaro Bartolome", email = "alvaro.bartolome@huggingface.co"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "requests>=2.33.1",
    "typer>=0.9.0",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.10.6",
    "huggingface-hub>=0.30.2",
    "semver>=3.0.4",
]
scripts = { "dell-ai" = "dell_ai.cli.main:app" }
urls = { Repository = "https://github.com/huggingface/dell-ai", Homepage = "https://dell.huggingface.co/" }

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.1.0",
    "pytest-subprocess>=1.5.3",
    "ruff>=0.8.0",
    "ipykernel>=6.29.5",
    "bump2version>=1.0.1",
    "fastapi[standard]>=0.128.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dell_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=dell_ai --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.coverage.run]
source = ["dell_ai"]
omit = ["tests/*", "**/__init__.py"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
